--- a/src/app/components/shared/liste/liste.component.html
+++ b/src/app/components/shared/liste/liste.component.html
@@ -20,7 +20,7 @@
                         <td>{{ ticket.nom }}</td>
                         <td>{{ ticket.description | truncate: 200 }}</td>
                         <td>{{ ticket.date | date:'le dd/MM/yyyy à HH:mm' }}</td>
-                        <td [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</td>
+                        <td><span [ngClass]="(ticket?.etat | etat).class">{{ (ticket?.etat | etat).text }}</span></td>
                         <td *ngIf="!this.authService.isSupport()"><a class="button is-primary" [routerLink]="['ticket', ticket.id]">Voir les détails</a></td>
                         <td *ngIf="this.authService.isSupport() && ticket?.etat == ticketEtat.OUVERT; else reprendre">
                             <button class="button is-primary" (click)="modal.openModal(ticket, 'response')">Répondre</button>
@@ -32,6 +32,9 @@
                         </ng-template>
 
                         <td *ngIf="this.authService.isSupport() && ticket.etat < ticketEtat.FERME" (click)="modal.openModal(ticket, 'close')"><a class="button is-danger">Fermer le ticket</a></td>
+                        <td *ngIf="ticket.etat == ticketEtat.FERME">
+                            <button class="button" [routerLink]="['ticket',ticket.id]">Voir les détails</button>
+                        </td>
                     </tr>
                 </tfoot>
             </table>
