--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <p class="navbar-item">PRAGMATISM APP</p>
+        <p class="navbar-item">TICKETS APP</p>
         <a class="navbar-item" [routerLink]="['/']" routerLinkActive="is-active" [routerLinkActiveOptions]="{exact:true}">
           Accueil
         </a>
